@@ -303,6 +303,8 @@ Release 2.4.0 - UNRELEASED
     HDFS-6059. TestBlockReaderLocal fails if native library is not available.
     (Akira AJISAKA via Colin Patrick McCabe)
 
+    HDFS-6060. NameNode should not check DataNode layout version (brandonli)
+
   BREAKDOWN OF HDFS-5698 SUBTASKS AND RELATED JIRAS
 
     HDFS-5717. Save FSImage header in protobuf. (Haohui Mai via jing9)
